# wifu

./: .gitignore  CFG-DOC.md  Cargo.toml  README.md  generated-profile.xml
src/: main.rs
src/data/: cfg.rs  error.rs  mod.rs  profile.rs
src/data/app/: acm.rs  cfg.rs  error.rs  interface.rs  interface_.rs  log.rs  mod.rs  network.rs  pinger.rs
src/data/app/state/: error.rs  mod.rs  reason.rs
src/data/app/util/: domain.rs  mod.rs  priority.rs
src/data/app/wlan/: acm.rs  event.rs  mod.rs
src/data/app/wlan/interface/: chosen.rs  error.rs  list.rs  mod.rs
src/data/app/wlan/interface/event/: acm.rs  autopilot.rs  mod.rs
src/data/app/wlan/network/: chosen.rs  error.rs  list.rs  mod.rs
src/data/app/wlan/network/event/: acm.rs  autopilot.rs  mod.rs  pinger.rs  waiter.rs
src/data/win/: error.rs  guid.rs  mod.rs
src/data/win/util/: mod.rs  pcwstr.rs  string.rs
src/data/win/wlan/: interface.rs  mod.rs  notification.rs
src/data/win/wlan/acm/: notification.rs
src/data/win/wlan/network/: bss.rs  mod.rs  phy.rs
src/data/win/wlan/network/profile/: mod.rs  raw.rs
src/data/win/wlan/network/security/: auth.rs  cipher.rs  mod.rs
src/handlers/: mod.rs
wifu-data/: cfg.json
