[package]
name = "wifu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
lazy_static = "1.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
once_cell = "1.18"
winping = "0.10"
widestring = "1.0"

[dependencies.windows]
version = "0.48"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_NetworkManagement_WiFi",
]