[package]
name = "wifu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
lazy_static = "1.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde-xml-rs = "0.6"
serde_with = "3.0"
xml-rs = "0.8"
once_cell = "1.18"
winping = "0.10"
widestring = "1.0"
hex = "0.4"
strum = "0.25"
strum_macros = "0.25"
num-traits = "0.2"
num-derive = "0.4"
rand = "0.8"

[dependencies.quick-xml]
version = "0.29"
features = ["serialize"]

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_NetworkManagement_WiFi",
    "Win32_NetworkManagement_Ndis",
]
